# authd

./: authd.pb.go  authd.proto  authd_grpc.pb.go  dh-cargo-tools_31ubuntu4_all.deb  dh-cargo_31ubuntu4_all.deb  go.mod  go.sum
.github/workflows/: auto-updates.yaml  build-deb.yaml  cla-check.yaml  git.yml  qa.yaml  sync-gh-jira.yaml  validate-dependabot.yaml
cmd/authd/: integrationtests.go  main.go
debian/: apport  authd-example-broker.install  authd.gdm-authd.pam  authd.gdm-authd.pam.in  authd.install  authd.service.in  changelog  control  copyright  files  gbp.conf  gdm3.gdm-authd.pam  install  lintian-overrides  rules  vendor-rust.sh
debian/pam-configs/: authd  authd.in
debian/source/: options
debian/tests/: control  run-tests.sh
examplebroker/: broker.go  com.ubuntu.authd.ExampleBroker.service
examplebroker/examplebroker-bin/: main.go
internal/brokers/: broker.go  broker_test.go  dbusbroker.go  examplebroker.go  manager.go  manager_test.go  withexamples.go
internal/consts/: consts.go
internal/daemon/: daemon.go  generate.go
internal/log/: log.go  log_test.go
internal/sliceutils/: sliceutils.go  sliceutils_test.go
internal/testsdetection/: testsdetection.go
internal/testutils/: args.go  bubblewrap.go  coverage.go  daemon.go  dbus.go
internal/users/: export_test.go  idgenerator.go  idgenerator_test.go  idlimits.go  manager.go  manager_test.go  testutils.go
internal/userutils/: userutils_test.go
nss/: Cargo.toml
nss/integration-tests/: helper_test.go  integration_test.go  nss_test.go
nss/src/: lib.rs
pam/: .gitignore  authentication.go  authmodeselection.go  brokerselection.go  button.go  commands.go  formmodel.go  gdm.go  gdmmodel.go  generate.go  generate.sh  libpam_authd.h  main-cli.go  main-dummy.go  main-exec.go  model.go  newpasswordmodel.go  pam-module-transaction-dummy.go  pam-module-transaction-dummy_test.go  pam-module-transaction.go  pam-utils.c  pam-utils.h  pam.go  pam.pb.go  pam.proto  pam_module.go  pam_test.go  qrcodemodel.go  return.go  userselection.go  utils_c.go
pam/adapter/: generate.go  pam.pb.go  pam.proto
pam/gdm/: conversation.go  conversation_test.go  datatype_string.go  eventtype_string.go  extension.go  gdm.pb.go  (+10 more)
pam/gdm-extensions/: gdm-private-string-pam-extension.h
pam/go-loader/: libpam-authd.pam-auth-update.in  meson.build  meson_options.txt  module.c
systemd/: authd.socket  examplebroker.service
tools/: go.mod  go.sum  tools.go
(+370 files in other folders)
